Fix localization of ORS turn instructions.

Restricts the localization to those languages listed in
http://wiki.openstreetmap.org/wiki/OpenRouteService/Instructions
Furthermore maps norwegian and swedish language codes to those used
by ORS.
BUG: 296382